--- a/plugin/style.css
+++ b/plugin/style.css
@@ -1,3 +1,12 @@
+/*****************************************************************************
+** ANGRYBIRDS AI AGENT FRAMEWORK
+** Copyright (c) 2013, XiaoYu (Gary) Ge, Stephen Gould, Jochen Renz
+**  Sahan Abeyasinghe,Jim Keys, Kar-Wai Lim, Zain Mubashir, Andrew Wang, Peng Zhang
+** All rights reserved.
+**This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. 
+**To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-sa/3.0/ 
+*or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.
+*****************************************************************************/
 .ai_button {
 	border: 1px solid black;
 	background-color: red;
